relatorio de vendas

--- a/public/admin/relatorios.html
+++ b/public/admin/relatorios.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Relatório de Vendas - Food Truck</title>
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../../assets/css/style.css"">
     <link rel="stylesheet" href="../../assets/css/relatorios.css"> <!-- CSS específico para esta área -->
 </head>
 <body>
     <header>
+        
         <div class="header-container">
             <h1>Food Truck - Relatório de Vendas</h1>
             <nav>
-                <a href="acompanhar_pedidos.html">Acompanhar Pedidos</a>
-                <a href="#" id="logoutBtn">Sair</a>
+                <a href="../atendente/menu.html"> Voltar </a>           
             </nav>
         </div>
     </header>
