filtro de data inclusao de todo o periodo

--- a/public/admin/relatorios.html
+++ b/public/admin/relatorios.html
@@ -32,6 +32,7 @@
                     <option value="currentMonth">Mês atual</option>
                     <option value="lastMonth">Mês anterior</option>
                     <option value="currentYear">Ano atual</option>
+                    <option value="allTime">Todo o período</option>
                 </select>
             </div>
             <div class="filter-group">
@@ -41,8 +42,7 @@
                     <option value="month">Mês</option>
                 </select>
             </div>
-            
-            </div>
+        </div>
 
         <div class="chart-container">
             <canvas id="salesChart"></canvas>
