refatoração do menu: Ocultar campos do atenendente e chapeiro

--- a/public/atendente/menu.html
+++ b/public/atendente/menu.html
@@ -16,8 +16,8 @@
                     <li><a href="#" id="viewCartBtn">Ver Carrinho (<span id="cartItemCount">0</span>)</a></li>
                     <li><a href="acompanhar_pedidos.html">Acompanhar Pedidos</a></li>
                     <li><a href="registrar_avaliacao.html">Avaliar Pedidos</a></li>
-                    <li><a href="../admin/gerenciar_produtos.html">Gerenciar Produtos</a></li>       
-                    <li><a href="../admin/relatorios.html">Relatório</a></li>                 
+                    <li class="admin-only"><a href="../admin/gerenciar_produtos.html">Gerenciar Produtos</a></li>
+                    <li class="admin-only"><a href="../admin/relatorios.html">Relatório</a></li>
                     <li><a href="#" id="logoutBtn">Sair</a></li>                 
                 </ul>
             </nav>
