--- a/public/usuario/cardapio.html
+++ b/public/usuario/cardapio.html
@@ -6,21 +6,14 @@
     <meta name="description" content="Menu e Ranking de Produtos.">
     <title>Menu e Ranking de Produtos</title>
     <link rel="stylesheet" href="../../assets/css/style.css">
-    <link rel="stylesheet" href="../../assets/css/avaliar.css">
-    <link rel="stylesheet" href="cardapio.css"> </head>
+    <link rel="stylesheet" href="../../assets/css/cardapio.css">
+</head>
 <body>
-    <header>
-        <div class="container header-container">
-            <h1>Menu e Avaliações</h1>
-        </div>
-    </header>
-
     <main class="container">
         <section id="product-menu-section">
             <h2>Nosso Menu</h2>
             <div id="menuLoadingMessage" class="message">Carregando menu...</div>
-            <div id="menuList">
-                </div>
+            <div id="menuList"></div>
             <p id="noMenuMessage" class="message" style="display: none;">Nenhum item disponível no menu no momento.</p>
         </section>
 
@@ -28,19 +21,9 @@
 
         <section id="product-ranking-section">
             <h2>Ranking de Produtos Avaliados</h2>
-            <p id="rankingLoadingMessage" class="message">Carregando ranking...</p>
+            <div id="rankingLoadingMessage" class="message">Carregando ranking...</div>
+            <div id="rankingList"></div>
             <p id="noRankingMessage" class="message" style="display: none;">Nenhum produto avaliado ainda.</p>
-            <table id="rankingTable" style="display: none;">
-                <thead>
-                    <tr>
-                        <th>Produto</th>
-                        <th>Vendas</th>
-                        <th>Média de Notas</th>
-                    </tr>
-                </thead>
-                <tbody id="rankingTableBody">
-                    </tbody>
-            </table>
         </section>
     </main>
 
@@ -51,5 +34,6 @@
     </footer>
 
     <script src="../../assets/js/common.js"></script>
-    <script src="cardapio.js"></script> </body>
+    <script src="cardapio.js"></script>
+</body>
 </html>
