melhorar o layou do menu do usuario

--- a/public/usuario/cardapio.html
+++ b/public/usuario/cardapio.html
@@ -9,23 +9,30 @@
     <link rel="stylesheet" href="../../assets/css/cardapio.css">
 </head>
 <body>
-    <main class="container">
-        <section id="product-menu-section">
-            <h2>Nosso Menu</h2>
-            <div id="menuLoadingMessage" class="message">Carregando menu...</div>
-            <div id="menuList"></div>
-            <p id="noMenuMessage" class="message" style="display: none;">Nenhum item disponível no menu no momento.</p>
-        </section>
+    <div class="content-wrapper">
+        <div class="left-container">
+            <h1>Foodtruck do Sr. Elpídio</h1>
+            <p>Olá, seja muito bem-vindo! É uma grande alegria ter você por aqui. Explore nosso cardápio e prepare-se para uma experiência deliciosa. Se tiver qualquer dúvida, é só chamar!</p>
+        </div>
 
-        <hr>
+        <main class="container">
+            <section id="product-menu-section">
+                <h2>Nosso Menu</h2>
+                <div id="menuLoadingMessage" class="message">Carregando menu...</div>
+                <div id="menuList"></div>
+                <p id="noMenuMessage" class="message" style="display: none;">Nenhum item disponível no menu no momento.</p>
+            </section>
 
-        <section id="product-ranking-section">
-            <h2>Ranking de Produtos Avaliados</h2>
-            <div id="rankingLoadingMessage" class="message">Carregando ranking...</div>
-            <div id="rankingList"></div>
-            <p id="noRankingMessage" class="message" style="display: none;">Nenhum produto avaliado ainda.</p>
-        </section>
-    </main>
+            <hr>
+
+            <section id="product-ranking-section">
+                <h2>Ranking de Produtos Avaliados</h2>
+                <div id="rankingLoadingMessage" class="message">Carregando ranking...</div>
+                <div id="rankingList"></div>
+                <p id="noRankingMessage" class="message" style="display: none;">Nenhum produto avaliado ainda.</p>
+            </section>
+        </main>
+    </div>
 
     <footer>
         <div class="container">
