--- a/public/admin/relatorios.html
+++ b/public/admin/relatorios.html
@@ -75,6 +75,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chartjs-adapter-date-fns/dist/chartjs-adapter-date-fns.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels@2.0.0"></script>
     <script src="../../assets/js/common.js"></script>
     <script src="relatorios.js"></script>
 </body>
