titulo: comida e bebida

--- a/public/usuario/cardapio.html
+++ b/public/usuario/cardapio.html
@@ -19,9 +19,15 @@
             <section id="product-menu-section">
                 <h2>Nosso Menu</h2>
                 <div id="menuLoadingMessage" class="message">Carregando menu...</div>
-                <div class="menu-columns">
-                    <div id="foodList" class="menu-column scrollable-list"></div>
-                    <div id="drinkList" class="menu-column scrollable-list"></div>
+               <div class="menu-columns">
+                    <div class="menu-column">
+                        <h3 class="menu-heading">Lanche</h3>
+                        <div id="foodList" class="scrollable-list"></div>
+                    </div>
+                    <div class="menu-column">
+                        <h3 class="menu-heading">Bebida</h3>
+                        <div id="drinkList" class="scrollable-list"></div>
+                    </div>
                 </div>
                 <p id="noMenuMessage" class="message" style="display: none;">Nenhum item disponível no menu no momento.</p>
             </section>
