--- a/public/admin/gerenciar_produtos.html
+++ b/public/admin/gerenciar_produtos.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin - Gerenciar Produtos</title>
     <link rel="stylesheet" href="../../assets/css/gerenciar_produtos.css">
+     <link rel="stylesheet" href="../../assets/css/style.css">
     
 </head>
 <body>
