criação de cards  para as notas dos produtos

--- a/public/atendente/registrar_avaliacao.html
+++ b/public/atendente/registrar_avaliacao.html
@@ -58,17 +58,9 @@
             <h2>Ranking de Produtos Avaliados</h2>
             <p id="rankingLoadingMessage" class="message">Carregando ranking...</p>
             <p id="noRankingMessage" class="message" style="display: none;">Nenhum produto avaliado ainda.</p>
-            <table id="rankingTable" style="display: none;">
-                <thead>
-                    <tr>
-                        <th>Produto</th>
-                        <th>Vendas</th>
-                        <th>Média de Notas</th>
-                    </tr>
-                </thead>
-                <tbody id="rankingTableBody">
-                </tbody>
-            </table>
+            <div id="rankingList" class="ranking-list-container" style="display: none;">
+                <!-- Ranking cards will be inserted here -->
+            </div>
         </section>
     </main>
 
