--- a/public/atendente/menu.html
+++ b/public/atendente/menu.html
@@ -86,6 +86,7 @@
     </footer>
 
     <script src="../../assets/js/common.js"></script>
+    <script src="menu.logic.js"></script>
     <script src="menu.js"></script>
 </body>
 </html>
