rodape tela login

--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,7 @@
             <p id="errorMessage" style="display:none; color:red;"></p>
         </section>
     </main>
-    <footer>
+    <footer class="index">
         <p>&copy; 2025 Projeto Aplicado. Todos os direitos reservados.</p>
     </footer>
     <script src="../assets/js/common.js"></script>
