--- a/public/admin/gerenciar_produtos.html
+++ b/public/admin/gerenciar_produtos.html
@@ -46,13 +46,17 @@
                 <label for="offset">Offset:</label>
                 <input type="number" id="offset" value="0" min="0">
                 <label for="limit">Limit:</label>
-                <input type="number" id="limit" value="10" min="1" max="100">
+                <input type="number" id="limit" value="2" min="1" max="100">
                 <button id="fetchProductsBtn">Carregar Produtos</button>
             </div>
             <ul id="productsList">
                 <li>Carregando produtos...</li>
             </ul>
             <p id="productsPaginationInfo"></p>
+            <div class="pagination-controls">
+                <button id="prevPageBtn">Anterior</button>
+                <button id="nextPageBtn">Próxima</button>
+            </div>
         </section>
 
         <section class="product-details" >
