--- a/public/atendente/acompanhar_pedidos.html
+++ b/public/atendente/acompanhar_pedidos.html
@@ -61,6 +61,7 @@
         <p>&copy; 2025 Projeto Aplicado. Todos os direitos reservados.</p>       
     </footer>
 
-    <script src="../../assets/js/common.js"></script>
+    <script src="../../assets/js/api.js"></script>
+    <script src="../../assets/js/utils.js"></script>
     <script src="acompanhar_pedidos.js"></script> </body>
 </html>
