--- a/public/atendente/registrar_avaliacao.html
+++ b/public/atendente/registrar_avaliacao.html
@@ -68,7 +68,8 @@
         <p>&copy; 2025 Projeto Aplicado. Todos os direitos reservados.</p>
     </footer>
 
-    <script src="../../assets/js/common.js"></script>
+    <script src="../../assets/js/api.js"></script>
+    <script src="../../assets/js/utils.js"></script>
     <script src="registrar_avaliacao.js"></script>
     </body>
 </div>
