--- a/public/index.html
+++ b/public/index.html
@@ -38,7 +38,8 @@
     <footer class="index">
         <p>&copy; 2025 Projeto Aplicado. Todos os direitos reservados.</p>
     </footer>
-    <script src="../assets/js/common.js"></script>
+    <script src="../assets/js/api.js"></script>
+    <script src="../assets/js/utils.js"></script>
     <script src="./index.js"></script>
 </body>
 </html>
