--- a/public/usuario/cardapio.html
+++ b/public/usuario/cardapio.html
@@ -50,7 +50,9 @@
             <p>&copy; 2025 Projeto Aplicado. Todos os direitos reservados.</p>        
     </footer>
 
-    <script src="../../assets/js/common.js"></script>
+    
+    <script src="../../assets/js/api.js"></script>
+    <script src="../../assets/js/utils.js"></script>
     <script src="cardapio.js"></script>
 </body>
 </html>
