teste usuario admin corrigido

--- a/tests/menu.test.html
+++ b/tests/menu.test.html
@@ -12,6 +12,10 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mocha/10.2.0/mocha.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/chai/4.3.10/chai.min.js"></script>
     
+    <!-- Dependências da Lógica a ser testada -->
+    <script src="../assets/js/api.js"></script>
+    <script src="../assets/js/utils.js"></script>
+
     <!-- Lógica a ser testada -->
     <script src="../public/atendente/menu.logic.js"></script>
 
