--- a/tests/login.test.html
+++ b/tests/login.test.html
@@ -1,24 +1,29 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <title>Testes de Login</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/mocha/10.2.0/mocha.min.css" />
 </head>
+
 <body>
     <div id="mocha"></div>
 
     <!-- Bibliotecas de Teste -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mocha/10.2.0/mocha.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/chai/4.3.10/chai.min.js"></script>
-    
-    <!-- Mock da API_BASE_URL -->
+
+    <!-- Mock da API_BASE_URL (usar HTTPS de teste para evitar URLs HTTP inseguras).
+         Os testes unitários neste arquivo usam funções de fetch mockadas, portanto
+         não realizam chamadas de rede reais. -->
     <script>
-        const API_BASE_URL = 'http://fakeapi.com';
+        const API_BASE_URL = 'https://fakeapi.test';
     </script>
 
     <!-- Arquivo com os Casos de Teste -->
     <script src="./login.test.js"></script>
 
 </body>
+
 </html>
